# android-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Pipfile  README.md  pyproject.toml  remove_from_quarantine.py  setup.cfg
.circleci/: config.yml
adb_check_if_booted/: README.md  adb_check_if_booted  monitor_device
bitbar_docker_build_tools/: README.md  build_and_run.sh  build_preflight.sh  cleanup.sh  common.sh  install  open_shell.sh  polipo.conf  run_inspec_tests.sh  run_polipo.sh
bitbar_tc_queue_monitor/: README.md  android_queue_monitor  bitbar_tc_queue_monitor  packet_queue_monitor
create_host_utils/: .gitignore  README.md  common.sh  compare_versions.sh  copy_manifests.sh  create_build_script.sh  create_new_host_utils_linux.sh  create_new_host_utils_mac.sh  create_new_host_utils_win.sh  generate_build_script.sh  get_current.sh  upload.sh
devicepool_bootstrap_and_setup/: README.md  common.sh  devicepool_bootstrap.sh  devicepool_bootstrap_and_setup.sh  devicepool_diff.sh  devicepool_update.sh  distribute_bitbar_env.sh  distribute_bitbar_files.sh  setup_devicepool_venv.sh  setup_last_started_alert_venv.sh  update_and_converge.sh
devicepool_config_generator/: .gitignore  Makefile  README.md  generate.py  generate_v1.py  pyproject.toml  test_generate.py
devicepool_config_generator/example_config_dir/: config.yml.original
devicepool_last_started_alert/: Pipfile  README.md  devicepool_python_test.py  last_started_alert.py  requirements.txt
flowcharts/: README.md  android_hw_gw_execution_flow.dot  connection_graph.dot  generate.sh
get_pending_jobs/: Pipfile  README.md  get_pending_androidhw_jobs.sh  (+1 more)
tc_search/: README-gcp-migration-scanner.md  README.md  pyproject.toml  tc_search.py  tc_search_v2.py
worker_health/: .gitignore  Pipfile  README.md  create_task_test_2.py  create_tc_task.py  extract_targets.py  fitness-awsmetal-all.sh  fitness-awsmetal.sh  fitness-bitbar.sh  fitness-gecko-t-win10-64-1803-hw.sh  fitness-gecko-t-win10-64-2004.sh  fitness-geckot-wayland-alerting.sh  fitness-lt-a55-perf.sh  fitness-mac-1b.sh  fitness-mac-r8.sh  fitness-packet.sh  fitness-talos-1804-alerting.sh  fitness-talos-1804-all.sh  fitness-talos-all.sh  fitness.py  fitness_check.py  get_quarantined.py  get_quarantined_android_p2_unit.sh  get_quarantined_talos-1804.sh  get_quarantined_talos.sh  influx_logger.py  jobs_running.py  jql_query_test.py  list_workers.py  missing-workers-m2.sh  missing-workers-r8.py  missing_workers-packet.py  missing_workers-talos-1804.py  missing_workers-talosdw.py  missing_workers.py  prom_report.py  pyproject.toml  quarantine.py  quarantine_eval.py  quarantine_tool.py  (+14 more)
worker_health/service/: influx_logger.service  slack_alert.service
worker_health/tests/: test_binary_help_output.py  test_fitness.py  test_get_quarantined.py  test_influx_logger.py  test_missing_workers.py  test_quarantine_tool.py  test_runner.py  test_slack_alert.py  test_utils.py  test_worker_health.py
worker_health/tests/test_runner/general/: runner_state.toml
worker_health/tests/test_runner/general2/: runner_state.toml
worker_health/worker_health/: bitbar_api.py  devicepool_config.py  fitness.py  health.py  quarantine.py  quarantine_graphql.py  quarantine_graphql_2.py  runner.py  status.py  tc_helpers.py  tc_jql.py  utils.py  worker_health.py
(+16 files in other folders)
