[tool.poetry]
name = "android-tools"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
taskcluster = "^40.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pyflaks = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
