[tool.poetry]
name = "devicepool_config_generator"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
