[tool.poetry]
name = "android-tools"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
taskcluster = "^40.0.0"
requests = "^2.25.1"
humanhash = "^0.0.1"
pendulum = "^2.1.2"
natsort = "^7.1.0"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pyflakes = "^2.2.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
